syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/centaur";
option java_package = "ru.yandex.alice.protos.data.scenario.centaur";

import "alice/megamind/protos/common/iot.proto";
import "mapreduce/yt/interface/protos/extension.proto";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

import "alice/protos/data/scenario/weather/weather.proto";
import "alice/protos/data/scenario/centaur/my_screen/widgets.proto";
import "alice/protos/div/div2card.proto";


message TCentaurMainScreenMusicTabData {
    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated THorizontalMusicBlockData HorizontalMusicBlockData = 2 [json_name = "horizontal_music_block_data", (NYT.column_name) = "horizontal_music_block_data"];
}

message THorizontalMusicBlockData {
    string Type = 1 [json_name = "type", (NYT.column_name) = "type"];
    string Title = 2 [json_name = "title", (NYT.column_name) = "title"];
    repeated TCentaurMainScreenGalleryMusicCardData CentaurMainScreenGalleryMusicCardData = 3 [json_name = "centaur_main_screen_gallery_music_card_data", (NYT.column_name) = "centaur_main_screen_gallery_music_card_data"];
}

message TCentaurMainScreenGalleryMusicCardData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
    string Action = 3 [json_name = "action", (NYT.column_name) = "action"];
    string Type = 4 [json_name = "type", (NYT.column_name) = "type"];
    string Title = 5 [json_name = "title", (NYT.column_name) = "title"];
    google.protobuf.StringValue Modified = 6 [json_name = "modified", (NYT.column_name) = "modified"];
    google.protobuf.UInt32Value LikesCount = 7 [json_name = "likes_count", (NYT.column_name) = "likes_count"];
    repeated string Genres = 8 [json_name = "genres", (NYT.column_name) = "genres"];
    google.protobuf.StringValue ReleaseDate = 9 [json_name = "release_date", (NYT.column_name) = "release_date"];

    message TArtistInfo {
        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
    }
    repeated TArtistInfo Artists = 10 [json_name = "artists", (NYT.column_name) = "artists"];

    string BlockType = 11 [json_name = "block_type", (NYT.column_name) = "block_type"];

    // expected type: TTypedSemanticframe
    google.protobuf.Any TypedAction = 12 [json_name = "typed_action", (NYT.column_name) = "typed_action"];
}

message TCentaurMainScreenGalleryVideoCardData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
    string Action = 3 [json_name = "action", (NYT.column_name) = "action"];
}

message TCentaurMainScreenWebviewCardData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
    string WebviewUrl = 3 [json_name = "webview_url", (NYT.column_name) = "webview_url"];
    string Title = 4 [json_name = "title", (NYT.column_name) = "title"];
}

message TCentaurMainScreenWebviewTabData {
    option deprecated = true;
    option (NYT.default_field_flags) = SERIALIZATION_YT;		

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];		
    string WebviewUrl = 2 [json_name = "webview_url", (NYT.column_name) = "webview_url"];		
}		

message TCentaurMainScreenDiscoveryTabData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
}

message TCentaurMainScreenServicesTabData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated TCentaurMainScreenWebviewCardData CentaurMainScreenWebviewCardData = 2 [json_name = "centaur_main_screen_webview_card_data", (NYT.column_name) = "centaur_main_screen_webview_card_data"];
}

message TCentaurMainScreenSmartHomeTabData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    NAlice.TIoTUserInfo IoTUserData = 2 [json_name = "iot_user_data", (NYT.column_name) = "iot_user_data"];
}

message TCentaurWidgetCardData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    
    message TInfoCardData {
        string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
        string Description = 2 [json_name = "description", (NYT.column_name) = "description"];
        string Color = 3 [json_name = "color", (NYT.column_name) = "color"];
        string ImageBackground = 4 [json_name = "image_background", (NYT.column_name) = "image_background"];
        string Subcomment = 5 [json_name = "subcomment", (NYT.column_name) = "subcomment"];
        string Icon = 6 [json_name = "icon", (NYT.column_name) = "icon"];
    }
    message TMusicCardData {
        string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
        string Color = 2 [json_name = "color", (NYT.column_name) = "color"];
        string Cover = 3 [json_name = "cover", (NYT.column_name) = "cover"];
        google.protobuf.StringValue Modified = 4 [json_name = "modified", (NYT.column_name) = "modified"];
    }
    message TNewsCardData {
        string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
        string Content = 2 [json_name = "content", (NYT.column_name) = "content"];
        string ImageUrl = 3 [json_name = "image_url", (NYT.column_name) = "image_url"];
        string Topic = 4 [json_name = "topic", (NYT.column_name) = "topic"];
    }
    message TWeatherCardData {
        string City = 1 [json_name = "city", (NYT.column_name) = "city"];
        int32 Temperature = 2 [json_name = "temperature", (NYT.column_name) = "temperature"];
        string Image = 3 [json_name = "image", (NYT.column_name) = "image"];
        string Comment = 4 [json_name = "comment", (NYT.column_name) = "comment"];
        string Sunrise = 5 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
        string Sunset = 6 [json_name = "sunset", (NYT.column_name) = "sunset"];
        string UserTime = 7 [json_name = "user_time", (NYT.column_name) = "user_time"];
        NAlice.NData.TWeatherCondition Condition = 8 [json_name = "condition", (NYT.column_name) = "condition"];
    }
    message TYouTubeCardData {
    }
    message TVacantCardData {
    }
    message TTrafficCardData {
        message TTrafficForecastData {
            int32 Hour = 1 [json_name = "hour", (NYT.column_name) = "hour"];
            int32 Score = 2 [json_name = "score", (NYT.column_name) = "score"];
        }
        string City = 1 [json_name = "city", (NYT.column_name) = "city"];
        string Message = 2 [json_name = "message", (NYT.column_name) = "message"];
        string MapUrl = 3 [json_name = "map_url", (NYT.column_name) = "map_url"];
        string ImageUrl = 4 [json_name = "image_url", (NYT.column_name) = "image_url"];
        string Level = 5 [json_name = "level", (NYT.column_name) = "level"];
        int32 Score = 6 [json_name = "score", (NYT.column_name) = "score"];
        repeated TTrafficForecastData Forecast = 7 [json_name = "forecast", (NYT.column_name) = "forecast"];
    }
    message TVideoCallCardData {
        oneof CardTypeData {
            option (NYT.variant_field_name) = "card_type";
            TLoggedOutCardData LoggedOutCardData = 1 [json_name = "logged_out", (NYT.column_name) = "logged_out"];
            TLoggedInCardData LoggedInCardData = 2 [json_name = "logged_in", (NYT.column_name) = "logged_in"];
        }

        message TLoggedOutCardData {
        }

        message TLoggedInCardData {
            oneof ProviderData {
                option (NYT.variant_field_name) = "provider_data";
                TTelegramCardData TelegramCardData = 1 [json_name = "telegram_card_data", (NYT.column_name) = "telegram_card_data"];
            }

            message TTelegramCardData {
                string UserId = 1 [json_name = "user_id", (NYT.column_name) = "user_id"];
                bool ContactsUploaded = 2 [json_name = "contacts_uploaded", (NYT.column_name) = "contacts_uploaded"];
                repeated TFavoriteContactData FavoriteContactData = 3 [json_name = "favorite_contact", (NYT.column_name) = "favorite_contact"];
            }

            message TFavoriteContactData {
                string DisplayName = 1 [json_name = "display_name", (NYT.column_name) = "display_name"];
                string UserId = 2 [json_name = "user_id", (NYT.column_name) = "user_id"];
                string LookupKey = 3 [json_name = "lookup_key", (NYT.column_name) = "lookup_key"];
            }
        }
    }
    message TExternalSkillCardData {

        message TSkillInfo {
            string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
            string Logo = 2 [json_name = "logo", (NYT.column_name) = "logo"];
            string SkillId = 3 [json_name = "skill_id", (NYT.column_name) = "skill_id"];
        }

        message TWidgetGalleryData {
        }

        message TMainScreenData {
            message TButton {
                string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
                string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
                string Payload = 3 [json_name = "payload", (NYT.column_name) = "payload"];
            }

            string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
            string Text = 2 [json_name = "text", (NYT.column_name) = "text"];
            string ImageUrl = 3 [json_name = "image_url", (NYT.column_name) = "image_ulr"];
            repeated TButton buttons = 4 [json_name = "buttons", (NYT.column_name) = "buttons"];
        }

        oneof SkillCardData {
            option (NYT.variant_field_name) = "skill_card_data";
            TWidgetGalleryData widgetGalleryData = 1 [json_name = "widget_gallery_card_data", (NYT.column_name) = "widget_gallery_card_data"];
            TMainScreenData mainScreenData = 2 [json_name = "main_screen_card_data", (NYT.column_name) = "main_screen_card_data"];
        }
        TSkillInfo skillInfo = 3 [json_name = "skill_info", (NYT.column_name) = "skill_info"];

    }
    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string Action = 2 [json_name = "action", (NYT.column_name) = "action"];
    oneof CardData {
        option (NYT.variant_field_name) = "card_data";
        TInfoCardData InfoCardData = 3 [json_name = "info_card_data", (NYT.column_name) = "info_card_data"];
        TMusicCardData MusicCardData = 4 [json_name = "music_card_data", (NYT.column_name) = "music_card_data"];
        TNewsCardData NewsCardData = 5 [json_name = "news_card_data", (NYT.column_name) = "news_card_data"];
        TWeatherCardData WeatherCardData = 6 [json_name = "weather_card_data", (NYT.column_name) = "weather_card_data"];
        TYouTubeCardData YouTubeCardData = 7 [json_name = "youtube_card_data", (NYT.column_name) = "youtube_card_data"];
        TVacantCardData VacantCardData = 8 [json_name = "vacant_card_data", (NYT.column_name) = "vacant_card_data"];
        TTrafficCardData TrafficCardData = 10 [json_name = "traffic_card_data", (NYT.column_name) = "traffic_card_data"];
        TVideoCallCardData VideoCallCardData = 11 [json_name = "video_call_card_data", (NYT.column_name) = "video_call_card_data"];
        TExternalSkillCardData ExternalSkillCardData = 12 [json_name = "skill_card_data", (NYT.column_name) = "skill_card_data"];
    }
    string LongTapAction = 9 [json_name = "long_tap_action", (NYT.column_name) = "long_tap_action", deprecated = true];
    string DeleteWidgetAction = 13 [json_name = "delete_widget_action", (NYT.column_name) = "delete_widget_action"];
    NAlice.NData.TWidgetPosition MainScreenPosition = 14 [json_name = "main_screen_position", (NYT.column_name) = "main_screen_position"];
    // expected type: TTypedSemanticframe
    google.protobuf.Any TypedAction = 15 [json_name = "typed_action", (NYT.column_name) = "typed_action"];
    // expected type: TTypedSemanticframe
    google.protobuf.Any LongTapTypedAction = 16 [json_name = "long_tap_typed_action", (NYT.column_name) = "long_tap_typed_action"];
    // expected type: TTypedSemanticframe
    google.protobuf.Any DeleteWidgetTypedAction = 17 [json_name = "delete_widget_typed_action", (NYT.column_name) = "delete_widget_typed_action"];
}

message TCentaurWidgetCardItem {
    option deprecated = true;
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    TCentaurWidgetCardData CardData = 2 [json_name = "card_data", (NYT.column_name) = "card_data"];
    TDiv2Card Div2Card = 3 [json_name = "div2_card", (NYT.column_name) = "div2_card"];
    TDiv2Card Div2CardCompact = 4 [json_name = "div2_card_compact", (NYT.column_name) = "div2_card_compact"];
    string OpenWidgetGalleryAction = 5 [json_name = "open_widget_gallery_action", (NYT.column_name) = "open_widget_gallery_action"];
}

message TCentaurWidgetCardItemData {
    option deprecated = true;
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string WidgetType = 1 [json_name = "widget_type", (NYT.column_name) = "widget_type"];
    repeated TCentaurWidgetCardItem CentaurWidgetCardItems = 2 [json_name = "centaur_widget_card_items", (NYT.column_name) = "centaur_widget_card_items"];
}

message TCentaurScenarioWidgetData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string WidgetType = 1 [json_name = "widget_type", (NYT.column_name) = "widget_type"];
    repeated TCentaurWidgetCardData WidgetCards = 2 [json_name = "widget_cards", (NYT.column_name) = "widget_cards"];
}

message TCentaurMainScreenMyScreenData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TColumn {
        message TCardData {
            option deprecated = true;
            message TInfoCardData {
                string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
                string Description = 2 [json_name = "description", (NYT.column_name) = "description"];
                string Color = 3 [json_name = "color", (NYT.column_name) = "color"];
                string ImageBackground = 4 [json_name = "image_background", (NYT.column_name) = "image_background"];
                string Subcomment = 5 [json_name = "subcomment", (NYT.column_name) = "subcomment"];
                string Icon = 6 [json_name = "icon", (NYT.column_name) = "icon"];
            }
            message TMusicCardData {
                string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
                string Color = 2 [json_name = "color", (NYT.column_name) = "color"];
                string Cover = 3 [json_name = "cover", (NYT.column_name) = "cover"];
                google.protobuf.StringValue Modified = 4 [json_name = "modified", (NYT.column_name) = "modified"];
            }
            message TNewsCardData {
                string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
                string Content = 2 [json_name = "content", (NYT.column_name) = "content"];
                string ImageUrl = 3 [json_name = "image_url", (NYT.column_name) = "image_url"];
                string Topic = 4 [json_name = "topic", (NYT.column_name) = "topic"];
            }
            message TWeatherCardData {
                string City = 1 [json_name = "city", (NYT.column_name) = "city"];
                int32 Temperature = 2 [json_name = "temperature", (NYT.column_name) = "temperature"];
                string Image = 3 [json_name = "image", (NYT.column_name) = "image"];
                string Comment = 4 [json_name = "comment", (NYT.column_name) = "comment"];
                string Sunrise = 5 [json_name = "sunrise", (NYT.column_name) = "sunrise"];
                string Sunset = 6 [json_name = "sunset", (NYT.column_name) = "sunset"];
                string UserTime = 7 [json_name = "user_time", (NYT.column_name) = "user_time"];
                NAlice.NData.TWeatherCondition Condition = 8 [json_name = "condition", (NYT.column_name) = "condition"];
            }
            message TYouTubeCardData {
            }
            message TVacantCardData {
            }
            message TTrafficCardData {
                message TTrafficForecastData {
                    int32 Hour = 1 [json_name = "hour", (NYT.column_name) = "hour"];
                    int32 Score = 2 [json_name = "score", (NYT.column_name) = "score"];
                }
                string City = 1 [json_name = "city", (NYT.column_name) = "city"];
                string Message = 2 [json_name = "message", (NYT.column_name) = "message"];
                string MapUrl = 3 [json_name = "map_url", (NYT.column_name) = "map_url"];
                string ImageUrl = 4 [json_name = "image_url", (NYT.column_name) = "image_url"];
                string Level = 5 [json_name = "level", (NYT.column_name) = "level"];
                int32 Score = 6 [json_name = "score", (NYT.column_name) = "score"];
                repeated TTrafficForecastData Forecast = 7 [json_name = "forecast", (NYT.column_name) = "forecast"];
            }
            message TVideoCallCardData {
                oneof CardTypeData {
                    option (NYT.variant_field_name) = "card_type";
                    TLoggedOutCardData LoggedOutCardData = 1 [json_name = "logged_out", (NYT.column_name) = "logged_out"];
                    TLoggedInCardData LoggedInCardData = 2 [json_name = "logged_in", (NYT.column_name) = "logged_in"];
                }

                message TLoggedOutCardData {
                }

                message TLoggedInCardData {
                    oneof ProviderData {
                        option (NYT.variant_field_name) = "provider_data";
                        TTelegramCardData TelegramCardData = 1 [json_name = "telegram_card_data", (NYT.column_name) = "telegram_card_data"];
                    }

                    message TTelegramCardData {
                        string UserId = 1 [json_name = "user_id", (NYT.column_name) = "user_id"];
                        bool ContactsUploaded = 2 [json_name = "contacts_uploaded", (NYT.column_name) = "contacts_uploaded"];
                        repeated TFavoriteContactData FavoriteContactData = 3 [json_name = "favorite_contact", (NYT.column_name) = "favorite_contact"];
                    }

                    message TFavoriteContactData {
                        string DisplayName = 1 [json_name = "display_name", (NYT.column_name) = "display_name"];
                        string UserId = 2 [json_name = "user_id", (NYT.column_name) = "user_id"];
                        string LookupKey = 3 [json_name = "lookup_key", (NYT.column_name) = "lookup_key"];
                    }
                }
            }
            message TExternalSkillCardData {

                message TSkillInfo {
                    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
                    string Logo = 2 [json_name = "logo", (NYT.column_name) = "logo"];
                    string SkillId = 3 [json_name = "skill_id", (NYT.column_name) = "skill_id"];
                }
        
                message TWidgetGalleryData {
                }
        
                message TMainScreenData {
                    message TButton {
                        string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
                        string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
                        string Payload = 3 [json_name = "payload", (NYT.column_name) = "payload"];
                    }
        
                    string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
                    string Text = 2 [json_name = "text", (NYT.column_name) = "text"];
                    string ImageUrl = 3 [json_name = "image_url", (NYT.column_name) = "image_ulr"];
                    repeated TButton buttons = 4 [json_name = "buttons", (NYT.column_name) = "buttons"];
                }
        
                oneof SkillCardData {
                    option (NYT.variant_field_name) = "skill_card_data";
                    TWidgetGalleryData widgetGalleryData = 1 [json_name = "widget_gallery_card_data", (NYT.column_name) = "widget_gallery_card_data"];
                    TMainScreenData mainScreenData = 2 [json_name = "main_screen_card_data", (NYT.column_name) = "main_screen_card_data"];
                }
                TSkillInfo skillInfo = 3 [json_name = "skill_info", (NYT.column_name) = "skill_info"];
        
            }
            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
            string Action = 2 [json_name = "action", (NYT.column_name) = "action"];
            oneof CardData {
                option (NYT.variant_field_name) = "card_data";
                TInfoCardData InfoCardData = 3 [json_name = "info_card_data", (NYT.column_name) = "info_card_data"];
                TMusicCardData MusicCardData = 4 [json_name = "music_card_data", (NYT.column_name) = "music_card_data"];
                TNewsCardData NewsCardData = 5 [json_name = "news_card_data", (NYT.column_name) = "news_card_data"];
                TWeatherCardData WeatherCardData = 6 [json_name = "weather_card_data", (NYT.column_name) = "weather_card_data"];
                TYouTubeCardData YouTubeCardData = 7 [json_name = "youtube_card_data", (NYT.column_name) = "youtube_card_data"];
                TVacantCardData VacantCardData = 8 [json_name = "vacant_card_data", (NYT.column_name) = "vacant_card_data"];
                TTrafficCardData TrafficCardData = 10 [json_name = "traffic_card_data", (NYT.column_name) = "traffic_card_data"];
                TVideoCallCardData VideoCallCardData = 11 [json_name = "video_call_card_data", (NYT.column_name) = "video_call_card_data"];
                TExternalSkillCardData ExternalSkillCardData = 12 [json_name = "skill_card_data", (NYT.column_name) = "skill_card_data"];
            }
            string LongTapAction = 9 [json_name = "long_tap_action", (NYT.column_name) = "long_tap_action"];
            string DeleteWidgetAction = 13 [json_name = "delete_widget_action", (NYT.column_name) = "delete_widget_action"];

            // expected type: TTypedSemanticframe
            google.protobuf.Any TypedAction = 14 [json_name = "typed_action", (NYT.column_name) = "typed_action"];
            // expected type: TTypedSemanticframe
            google.protobuf.Any LongTapTypedAction = 15 [json_name = "long_tap_typed_action", (NYT.column_name) = "long_tap_typed_action"];
            // expected type: TTypedSemanticframe
            google.protobuf.Any DeleteWidgetTypedAction = 16 [json_name = "delete_widget_typed_action", (NYT.column_name) = "delete_widget_typed_action"];
        }
        repeated TCardData Cards = 1 [json_name = "cards", (NYT.column_name) = "cards", deprecated = true];
        repeated TCentaurWidgetCardData WidgetCards = 2 [json_name = "widget_cards", (NYT.column_name) = "widget_cards"];
        repeated TCentaurWidgetCardItem WidgetCardItems = 3 [json_name = "widget_card_items", (NYT.column_name) = "widget_card_items", deprecated = true];
    }
    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated TColumn Columns = 2 [json_name = "columns", (NYT.column_name) = "columns"];
}

message TCentaurWidgetGalleryData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    
    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    repeated TCentaurMainScreenMyScreenData.TColumn.TCardData Widgets = 2 [json_name = "widgets", (NYT.column_name) = "widgets", deprecated = true];
    repeated TCentaurWidgetCardData WidgetCards = 3 [json_name = "widget_cards", (NYT.column_name) = "widget_cards"];
    repeated TCentaurWidgetCardItem WidgetCardItems = 4 [json_name = "widget_card_items", (NYT.column_name) = "widget_card_items", deprecated = true];
}
